# solidframe

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  CTestConfig.cmake  JOURNAL.md  LICENSE.txt  LICENSE_.txt  README  README.md  RELEASES.md  SolidFrame.podspec  VERSION  build.sh  check.config.cmake  config.h.in  configure  configure.bat  configure.ps1  find_boost.cmake  find_leveldb.cmake  find_snappy.cmake
algorithm/serialization/: CMakeLists.txt  basetypemap.hpp  binary.h  binary.hpp  binary_new.hpp  idtypemap.hpp  typemapper.hpp
audit/: CMakeLists.txt  log.hpp
audit/log/: CMakeLists.txt  logclientdata.hpp  logconnector.hpp  logdata.hpp  logmanager.hpp
audit/src/: log.cpp
branches/new_io/: CMakeLists.txt  Doxyfile
branches/work/: CMakeLists.txt  CTestConfig.cmake  VERSION  check.config.cmake  config.h.in  configure.bat  find_boost.cmake  find_openssl.cmake  utility.cmake
example/client/: CMakeLists.txt  alphaclient_p.cpp  alphaclient_s.cpp  alphafetch_p.cpp  alphastore_p.cpp  imapappender.cpp  writer.cpp
examples/serialization/: CMakeLists.txt  example_serialization_cross.cpp  example_serialization_fork.cpp  example_serialization_forkoffset.cpp  example_serialization_forkreinit.cpp  example_serialization_polymorphic.cpp  example_serialization_reinit.cpp  example_serialization_simple.cpp  example_serialization_simple_context.cpp  serialization_cross.cpp  serialization_cross_backend.cpp  serialization_fork.cpp  serialization_forkoffset.cpp  serialization_forkreinit.cpp  serialization_polymorphic.cpp  serialization_reinit.cpp  serialization_simple.cpp  serialization_simple_context.cpp
foundation/: CMakeLists.txt  activeset.hpp  commandexecuter.hpp  common.hpp  execpool.hpp  filekey.hpp  filekeys.hpp  filemanager.hpp  manager.hpp  memorystreammanager.hpp  object.hpp  objectpointer.hpp  objectselector.hpp  readwriteobject.hpp  readwriteservice.hpp  scheduler.hpp  schedulerbase.hpp  selectpool.hpp  service.hpp  signal.hpp  signalableobject.hpp  signalexecuter.hpp  visitor.hpp
foundation/aio/: CMakeLists.txt  aiomultiobject.hpp  aioobject.hpp  aiosecuresocket.hpp  aioselector.hpp  aiosingleobject.hpp
foundation/core/: CMakeLists.txt  command.hpp  common.hpp  filekeys.hpp  filemanager.hpp  manager.hpp  object.hpp  objptr.hpp  requestuid.hpp  service.hpp
foundation/file/: filebase.hpp  filekeys.hpp  filemanager.hpp  filemapper.hpp  filemappers.hpp
foundation/ipc/: connectoruid.hpp  ipcservice.hpp
foundation/src/: basicscheduler.cpp  execpool.cpp  execscheduler.cpp  filekeys.cpp  filemanager.cpp  manager.cpp  object.cpp  object.ipp  objectselector.cpp  requestuid.cpp  schedulerbase.cpp  service.cpp  signalexecuter.cpp
frame/: CMakeLists.txt  common.hpp  completion.hpp  event.hpp  manager.hpp  manager_old.hpp  message.hpp  object.hpp  object.ipp  objectbase.hpp  objectselector.hpp  reactor.hpp  reactorbase.hpp  reactorcontext.hpp  scheduler.hpp  schedulerbase.hpp  selector.hpp  selectorbase.hpp  service.hpp  sharedstore.hpp  timer.hpp  timestore.hpp
frame/aio/: CMakeLists.txt  aiocommon.hpp  aiocompletion.hpp  aiodatagram.hpp  aiolistener.hpp  aioobject.hpp  aioreactor.hpp  aioreactorcontext.hpp  aioresolver.hpp  aiosocket.hpp  aiostream.hpp  aiotimer.hpp
frame/aio2/: CMakeLists.txt  aiocommon.hpp  aiocompletion.hpp  aiointernetsocket.hpp  aiolistener.hpp  aioobject.hpp  aioplainsocket.hpp  aioreactor.hpp  aioreactorcontext.hpp  aioresolver.hpp  aiosocket.hpp  aiostream.hpp  design.txt  readme.txt
frame/file/: filestore.hpp  filestream.hpp
frame/ipc/: CMakeLists.txt  README.md  ipcconfiguration.hpp  ipccontext.hpp  ipcerror.hpp  ipcmessage.hpp  ipcserialization.hpp  ipcservice.hpp  ipcsessionuid.hpp  readme.txt
frame/ipc2/: ipcservice.hpp  ipcsessionuid.hpp  readme.txt
frame/src/: arrayfind.hpp  basicscheduler.cpp  completion.cpp  manager.cpp  manager_old.cpp  object.cpp  reactor.cpp  requestuid.cpp  schedulerbase.cpp  selector.cpp  service.cpp  sharedstore.cpp  timer.cpp
libraries/system/: CMakeLists.txt  binary.hpp  cassert.hpp  common.hpp  condition.hpp  condition.ipp  convertors.hpp  debug.hpp  device.hpp  error.hpp  exception.hpp  filedevice.hpp  function.hpp  memory.hpp  mutex.ipp  nanotime.hpp  seekabledevice.hpp  sharedbackend.hpp  socketaddress.hpp  socketaddress.ipp  socketdevice.hpp  socketinfo.hpp  timespec.ipp
libraries/utility/: CMakeLists.txt  algorithm.hpp  any.hpp  common.hpp  dynamicpointer.hpp  dynamictype.hpp  event.hpp  innerlist.hpp  ioformat.hpp  iostream.hpp  iostream.ipp  istream.ipp  memoryfile.hpp  ostream.hpp  ostream.ipp  queue.hpp  sharedmutex.hpp  stack.hpp  stream.hpp  stream.ipp  workpool.hpp
solid/: API.md  CMakeLists.txt
solid/frame/: API.md  CMakeLists.txt  README.md  actor.hpp  actorbase.hpp  common.hpp  (+16 more)
system/: CMakeLists.txt  atomic.hpp  cassert.h  cassert.hpp  common.h  common.hpp  condition.hpp  condition.ipp  condition_boost.hpp  convertors.h  convertors.hpp  cstring.hpp  debug.h  debug.hpp  device.h  device.hpp  directory.hpp  dynamicpointer.hpp  dynamictype.hpp  error.hpp  exception.hpp  filedevice.h  filedevice.hpp  function.hpp  memorycache.hpp  memorycache.ipp  mutex.h  mutex.hpp  mutex.ipp  mutex_boost.hpp  mutualstore.hpp  seekabledevice.h  seekabledevice.hpp  sharedbackend.hpp  socketaddress.hpp  socketaddress.ipp  socketdevice.hpp  socketinfo.hpp  specific.hpp  synchronization.h  (+6 more)
trunk/: CMakeLists.txt  Doxyfile  Doxyfile.fast  README  VERSION  build.sh  check.config.cmake  config.h.in  configure  configure.ps1
utility/: CMakeLists.txt  algorithm.hpp  binaryseeker.hpp  common.hpp  dynamicpointer.hpp  dynamictype.hpp  functorstub.hpp  holder.hpp  innerlist.hpp  ioformat.hpp  iostream.h  iostream.ipp  istream.h  istream.hpp  list.h  list.hpp  memory.hpp  memoryfile.hpp  mutualobjectcontainer.hpp  mutualstore.hpp  ostream.h  ostream.hpp  ostream.ipp  polycontainer.hpp  queue.h  queue.hpp  shared.hpp  sharedcontainer.h  sharedcontainer.hpp  stack.h  stack.hpp  stream.ipp  streampointer.hpp  streamptr.h  streamptr.hpp  string.hpp  workpool.h  workpool.hpp
(+3977 files in other folders)
